fix collapse block

--- a/src/styles/delivery/_delivery_mobile.scss
+++ b/src/styles/delivery/_delivery_mobile.scss
@@ -210,6 +210,7 @@
         &__card {
             &-header {
                 display: flex;
+                flex-direction: column;
                 justify-content: space-between;
                 align-items: center;
                 width: 100%;
