--- a/src/styles/elements/_collapse-block.scss
+++ b/src/styles/elements/_collapse-block.scss
@@ -25,6 +25,9 @@
 
         }
     }
+    &__header {
+        cursor: pointer;
+    }
 
     .arrow {
         background: transparent;
